--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
             <!-- Glucose & Insulin Display -->
             <div id="metrics">
-                <p>Glucose Level: <span id="glucose-level">100</span></p>
-                <p>Insulin Sensitivity: <span id="insulin-sensitivity">100</span></p>
+                <p>Glucose Level: <span id="glucose-level">100</span> mg/dL</p>
+                <p>Insulin Sensitivity: <span id="insulin-sensitivity">100</span>%</p>
             </div>
 
             <!-- Lifestyle Changes -->
